--- a/project-card-1a.html
+++ b/project-card-1a.html
@@ -21,7 +21,7 @@
   <div class="extra content">
     <div class="ui mini labels">
       {% for label in include.page.labels %}
-      <div style="color:white;background-color:#20b2aa;" class="ui basic label">{{ label }}</div>
+      <div style="color:white;background-color:#01868C;" class="ui basic label">{{ label }}</div>
       {% endfor %}
     </div>
   </div>
